<resources>
    <string name="app_name">Duplom15</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Налаштування</string>
    <string name="action_logout">Вихід</string>

    <string name="title_activity_main2">Main2Activity</string>

    <string name="add_travel">Запропонувати поїздку</string>
    <string name="find_travel">Знайти поїздку</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_login">Вхід</string>

    <string name="title_activity_registration1">Registration1</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_all_products">AllProductsActivity</string>
    <string name="title_activity_add_travel">AddTravelAct</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



  <string name="drawer_open">Slider Menu Opened</string> 
  <string name="drawer_close">Slider Menu Closed</string> 
<string-array name="nav_drawer_items">
  <item>Головний екран</item>
  <item>Запропонувати поїздку</item>
  <item>Знайти поїздку</item>
  <item>Communities</item> 
  <item>Персональна сторінка</item>
  <item>Гарячі пропозиції</item>
  </string-array>
- <!--  Nav Drawer List Item Icons 
  --> 
- <!--  Keep them in order as the titles are in 
  --> 
- <array name="nav_drawer_icons">
  <item>@drawable/ic_home</item> 
  <item>@drawable/ic_people</item> 
  <item>@drawable/ic_photos</item> 
  <item>@drawable/ic_communities</item> 
  <item>@drawable/ic_pages</item> 
  <item>@drawable/ic_whats_hot</item> 
  </array>
- <!--  Content Description 
  --> 
  <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_map">Map</string>



    <string name="id">id</string>
    <string name="startPoint">startPoint</string>
    <string name="finishPoint">finishPoint</string>
    <string name="waypoint1">waypoint1</string>
    <string name="waypoint2">waypoint2</string>
    <string name="waypoint3">waypoint3</string>
    <string name="waypoint4">waypoint4</string>
    <string name="waypoint5">waypoint5</string>
    <string name="price">price</string>
    <string name="seats">seats</string>
    <string name="dataFirst">dataFirst</string>
    <string name="dataLast">dataLast</string>
    <string name="timeFirst">timeFirst</string>
    <string name="timeLast">timeLast</string>
    <string name="firstName">firstName</string>
    <string name="lastName">lastName</string>
    <string name="adress">adress</string>
    <string name="phone">phone</string>
    <string name="mail">mail</string>
    <string name="age">age</string>
    <string name="drivingExp">drivingExp</string>
    <string name="avatar">avatar</string>
    <string name="carBrand">carBrand</string>
    <string name="carModel">carModel</string>
    <string name="carType">carType</string>
    <string name="carPhoto">carPhoto</string>
    <string name="carColor">carColor</string>
    <string name="carSizeBaggage">carSizeBaggage</string>
    <string name="carNumberSeats">carNumberSeats</string>
    <string name="carAnimals">carAnimals</string>
    <string name="carSmoke">carSmoke</string>



</resources>
